; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/elftoolchain/libdwarf/extr_dwarf_pro_macinfo.c_dwarf_vendor_ext.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/elftoolchain/libdwarf/extr_dwarf_pro_macinfo.c_dwarf_vendor_ext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DW_DLE_ARGUMENT = common dso_local global i32 0, align 4
@DW_DLV_ERROR = common dso_local global i32 0, align 4
@DW_MACINFO_vendor_ext = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dwarf_vendor_ext(i32* %0, i32 %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %4
  %13 = load i8*, i8** %8, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %15, label %21

15:                                               ; preds = %12, %4
  %16 = load i32*, i32** %6, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = load i32, i32* @DW_DLE_ARGUMENT, align 4
  %19 = call i32 @DWARF_SET_ERROR(i32* %16, i32* %17, i32 %18)
  %20 = load i32, i32* @DW_DLV_ERROR, align 4
  store i32 %20, i32* %5, align 4
  br label %28

21:                                               ; preds = %12
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* @DW_MACINFO_vendor_ext, align 4
  %24 = load i32, i32* %7, align 4
  %25 = load i8*, i8** %8, align 8
  %26 = load i32*, i32** %9, align 8
  %27 = call i32 @_dwarf_add_macro(i32* %22, i32 %23, i32 %24, i32 -1, i8* %25, i32* null, i32* %26)
  store i32 %27, i32* %5, align 4
  br label %28

28:                                               ; preds = %21, %15
  %29 = load i32, i32* %5, align 4
  ret i32 %29
}

declare dso_local i32 @DWARF_SET_ERROR(i32*, i32*, i32) #1

declare dso_local i32 @_dwarf_add_macro(i32*, i32, i32, i32, i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
